Fix alignment

--- a/styles.css
+++ b/styles.css
@@ -69,7 +69,6 @@ a {
   width: 100%;
   height: 100%;
   margin: auto;
-  padding-top: 1.5rem;
   padding-left: 1.5rem;
   padding-right: 1.5rem;
   opacity: 0;
@@ -206,8 +205,6 @@ a {
 /* Scroll bar section */
 
 .scroll-bar-section {
-  padding-top: 1.5rem;
-  padding-bottom: 0.5rem;
   overflow: hidden;
   white-space: nowrap;
 }
@@ -248,7 +245,7 @@ a {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  width: 30rem;
+  width: 27.5rem;
 }
 
 .date-and-number {
